# ontofuel

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml  test.yml
data/: material_ontology_enhanced.json
docker/: .env.example  docker-compose.yml
docker/api/: Dockerfile  app.py  requirements.txt
docker/scripts/: restore.sh
docker/supabase/init/: 01_schema.sql
docker/web/: Dockerfile  index.html
docs/: Makefile  deployment.md  deployment_comparison.md  development_plan.md  user_manual.md
docs/api/: api_reference.rst  conf.py  index.rst
docs/superpowers/: CONTRIBUTING.md
docs/superpowers/plans/: 2026-05-03-o3-docker-fullstack.md  2026-05-03-o4-docs-release.md
ontology/: nvl_ontology_data.json
scripts/: graph_update.py  install_http_server.sh  ontology_critic.py  ontology_query_tool.py  ontology_semantic_enhancer.py  ontology_sublimation.py  ontology_to_nvl.py  ontology_versioning.py  restore_all_supabase_data.py  restore_supabase_from_json.py
src/ontofuel/: __init__.py  _compat.py  cli.py
src/ontofuel/core/: __init__.py  (+4 more)
tests/: test_api_app.py  test_api_docs.py  test_ci.py  test_cli.py  test_database.py  test_docker.py  test_docker_integration.py  test_docs.py  test_exporter.py  test_extractor.py  test_merger.py  test_ontology.py  test_query.py  test_readme_sections.py  test_release.py  test_restore.py  test_restore_script.py  test_schema.py  test_segmenter.py  test_updater.py  test_validator.py  test_visualization.py  test_web_frontend.py
tools/: pack_portable.sh
(+34 files in other folders)
